cros-mash: Fixed crashing AppList on app launch

Removed check in SetMouseDragging which was causing drag_view_ to be
initialized on AppsGridView destruction.

This CL also fixes https://bugs.chromium.org/p/chromium/issues/detail?id=766406#c7

Bug: 772563
Change-Id: Ie66bd1dd13c713b3a3585957dc34e9a972221314
Reviewed-on: https://chromium-review.googlesource.com/706547
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507682}
Former-commit-id: 3bd87aad03fecf0e21a6289410d9fd202685f2d9